# raydiance

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
docs/blog/: index.html
docs/blog/media/a-new-shiny-specular-brdf/: metallic-lerp.apng
docs/blog/media/clearing-window/: title.apng
docs/blog/media/implementing-disney-brdf-diffuse-model/: title.apng
docs/blog/media/new-skylight-model/: exposure.apng  new-offline-render-vp9.webm  sky-turbidity.apng  title-vp9.webm  tonemap-compare-dim.apng
docs/blog/media/offline-rendering-mode/: title-vp9.webm
docs/blog/posts/20230107-143931-hello-winit/: post.md
docs/blog/posts/20230108-152350-clearing-window/: post.md
docs/blog/posts/20230108-174904-first-triangle/: post.md  title.apng
docs/blog/posts/20230109-173419-more-triangles-cameras-light-and-depth/: post.md  title.apng
docs/blog/posts/20230109-222034-adding-multisampled-antialiasing-msaa/: post.md
docs/blog/posts/20230111-211700-path-tracing-on-cpu/: post.md
docs/blog/posts/20230112-144217-interactive-cpu-path-tracer/: post.md  title.apng
docs/blog/posts/20230112-200651-progressive-rendering/: post.md
docs/blog/posts/20230113-122259-cosine-weighted-hemisphere-sampling/: cosine.apng  post.md  uniform.apng
docs/blog/posts/20230115-121204-new-user-interface/: post.md
docs/blog/posts/20230115-185613-texture-support/: post.md
docs/blog/posts/20230119-134853-implementing-disney-brdf-diffuse-model/: post.md
docs/blog/posts/20230119-231441-visualizing-sample-placement/: post.md
docs/blog/posts/20230131-214641-a-new-shiny-specular-brdf/: post.md
docs/blog/posts/20230202-232000-multithreaded-raytracer/: post.md
docs/blog/posts/20230202-234700-offline-rendering-mode/: post.md
docs/blog/posts/20230209-121100-new-skylight-model/: new-offline-render-vp9.webm  post.md  sky-elevation.apng  tonemap-compare-bright.apng
docs/blog/posts/20230211-190654-sky-model-crate/: post.md
docs/blog/posts/20230211-192837-tweenable-materials/: materials-vp9.webm  post.md  title-vp9.webm
src/: aabb.rs  assets.rs  color.rs  exposure.rs  glb.rs  gltf.rs  gui.rs  intersection.rs  main.rs  math.rs  raytracing.rs  rds.rs  sampling.rs  triangle.rs  vulkan.rs  window.rs
src/assets/: .gitignore  rounded_cube.blend  rounded_cube.glb  rounded_cube.ron  rounded_cube_cloth.blend  rounded_cube_cloth.glb
src/assets/cfg/: debug.scene.ron  default.render.ron  hero.render.ron  material.scene.ron  preview.render.ron  rounded_cube.scene.ron  single.render.ron  single.scene.ron  sky.scene.ron  thumb.render.ron
src/blog/: expr.rs  input.rs  md.rs  mod.rs  plot.rs  template.rs
src/blog/posts/: 20230107-143931-hello-winit.md  20230108-152350-clearing-window.md  20230108-174904-first-triangle.md  20230109-173419-more-triangles-cameras-light-and-depth.md  20230109-222034-adding-multisampled-antialiasing-msaa.md  20230111-211700-path-tracing-on-cpu.md  20230112-144217-interactive-cpu-path-tracer.md  20230112-200651-progressive-rendering.md  20230113-122259-cosine-weighted-hemisphere-sampling.md  20230115-121204-new-user-interface.md  20230115-185613-texture-support.md  20230119-134853-implementing-disney-brdf-diffuse-model.md  20230119-231441-visualizing-sample-placement.md  20230131-214641-a-new-shiny-specular-brdf.md  20230202-232000-multithreaded-raytracer.md  20230202-234700-offline-rendering-mode.md  20230209-121100-new-skylight-model.md
src/blog/templates/: body.html  image-pair.html  image-single.html  post.html  style.css  video.html
src/cpupt/: aabb.rs  bsdf.rs  bvh.rs  bxdfs.rs  exposure.rs  intersection.rs  mod.rs  ray.rs  sampling.rs  sky.rs  triangle.rs
src/debug/: animation.rs  frame.rs  img.rs  mod.rs  plot.rs  scalar.rs  spherical.rs  text.rs
src/editor/: camera.rs  control_flow.rs  frame_state.rs  gui.rs  input_state.rs  inputs.rs  material_editor.rs  mod.rs  timing.rs  window.rs
src/img/: mod.rs
src/offline/: mod.rs
src/shaders/glsl/: .clang-format  imgui.frag  imgui.vert  raytracing_image.frag  raytracing_image.vert  triangle.frag  triangle.vert
src/shaders/spv/: imgui.frag  imgui.vert  raytracing_image.frag  raytracing_image.vert  triangle.frag  triangle.vert
src/vkpt/: mod.rs
src/vkpt/shaders/: .clang-format  common.glsl  common.glslh  triangle.frag  triangle.frag.glsl  triangle.mesh  triangle.mesh.glsl  triangle.task  triangle.task.glsl
src/vulkan/: buffer.rs  color_target.rs  debug.rs  depth_target.rs  device.rs  gui.rs  instance.rs  mod.rs  raster_scene.rs  raytracing_image.rs  shader.rs  surface.rs  swapchain.rs
src/vz/: anim.rs  annotation.rs  apng.rs  cfg.rs  ffmpeg.rs  font.rs  image.rs  mod.rs  page.rs  video.rs
util/: apng-to-vids.sh  check-asm.sh  debug-is.sh  ffmpeg.sh  image-flip.sh  mp4-to-vids.sh  video-grid.sh
(+6 files in other folders)
