[package]
authors = ["Vinh Truong <vinhphuc.truong@gmail.com>"]
edition = "2021"
name = "raydiance"
version = "0.1.0"

[dependencies]
anyhow = "1.0.68"
apng = "0.3.0"
approx = "0.5.1"
ash = "0.37.2"
ash-window = "0.12.0"
bitvec = "1.0.1"
bytemuck = { version = "1.13.0", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
easer = "0.3.0"
env_logger = "0.10.0"
gltf = "1.0.0"
image = "0.24.5"
imageproc = "0.23.0"
imgui = "0.10.0"
imgui-winit-support = "0.10.0"
indicatif = "0.17.3"
itertools = "0.10.5"
katex = { version = "0.4.5", default-features = false, features = ["duktape"] }
log = "0.4.17"
markdown = "1.0.0-alpha.6"
nalgebra = { version = "0.32.1", features = ["bytemuck"] }
num = "0.4.0"
num-format = "0.4.4"
palette = { version = "0.6.1", features = ["bytemuck"] }
png = "0.17.7"
rand = "0.8.5"
rand_pcg = "0.3.1"
raw-window-handle = "0.5.0"
rayon = "1.6.1"
ron = "0.8.0"
rusttype = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
sobol_burley = "0.4.0"
time = { version = "0.3.17", features = [
    "local-offset",
    "formatting",
    "parsing",
] }
tinytemplate = "1.2.1"
winit = "0.27.5"

[build-dependencies]
anyhow = "1.0.68"
